ui fixes: explore promo + frame overlap, @iceberg901 knows what I'm talking about (bitch wine fixes)

--- a/app/assets/stylesheets/partials/_in-line-notification.scss
+++ b/app/assets/stylesheets/partials/_in-line-notification.scss
@@ -27,3 +27,17 @@
     margin-bottom: 0.25em;
   }
 }
+
+.frame--explore-promo {
+  padding: 0.8em;
+
+  .explore-promo__button {
+    @include button-sizing;
+
+    float: right;
+  }
+
+  .explore-promo__h1 {
+    line-height: 2.3;
+  }
+}
